# NaaVRE-notebook-testsuite

./: README.md  pyproject.toml
notebooks/: happy_path_numpy.ipynb  happy_path_requests.ipynb  missing_import.ipynb  runtime_error.ipynb  syntax_error.ipynb
tests/: conftest.py  test_notebook_execution.py
